--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         50% { transform: translateY(-15px); }
       }
 
-      /* Marquee Animation - Slightly slower for better readability */
       @keyframes marquee {
         0% { transform: translateX(0); }
         100% { transform: translateX(-50%); }
@@ -35,7 +34,6 @@
         width: max-content;
       }
 
-      /* Snow Fall Animation Optimized */
       @keyframes snowFall {
         0% { transform: translate3d(0, -10vh, 0) rotate(0deg); opacity: 0; }
         10% { opacity: 0.7; }
@@ -72,15 +70,6 @@
         animation: float 4s ease-in-out infinite;
       }
 
-      .carousel-container::-webkit-scrollbar {
-        display: none;
-      }
-      .carousel-container {
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-      }
-
-      /* New Premium Button Style */
       .btn-stranger-pill {
         background-color: #e61e1e;
         color: white;
@@ -101,11 +90,6 @@
         transform: scale(1.05);
       }
 
-      .upside-down-bg {
-        background-color: #050505;
-        background-image: radial-gradient(circle at center, rgba(255, 0, 0, 0.08) 0%, transparent 70%);
-      }
-      
       .stranger-logo-container {
         display: inline-flex;
         flex-direction: column;
@@ -125,7 +109,7 @@
         content: "";
         position: fixed;
         top: 0; left: 0; width: 100%; height: 100%;
-        background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.02), rgba(0, 255, 0, 0.01), rgba(0, 0, 255, 0.02));
+        background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.05) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.01), rgba(0, 255, 0, 0.005), rgba(0, 0, 255, 0.01));
         background-size: 100% 2px, 3px 100%;
         pointer-events: none;
         z-index: 9999;
@@ -145,5 +129,6 @@
 </head>
   <body class="bg-black text-white font-body selection:bg-red-600 selection:text-white">
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
